--- a/.env.example
+++ b/.env.example
@@ -4,10 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL and SQLite.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL= 'mysql://avnadmin:AVNS_NQeglmyHofm1m4BlyXa@mysql-202c7f84-phamdung260510-1667.f.aivencloud.com:24026/defaultdb?ssl-mode=REQUIRED'
+DATABASE_URL=postgresql://postgres:root@localhost:5432/db_name?schema=public
 JWT_SIGNATURE=secret123456789
 FRONTEND_URL=http://localhost:3000
 PORT=3300
-JWT_SECRET_KEY='JWT_SECRET_KEY'
-
-METAMASK_MESSAGE_CONFIG='Welcome To Marketplace'
