--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,9 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL and SQLite.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL=postgresql://postgres:root@localhost:5432/db_name?schema=public
-JWT_SIGNATURE=secret123456789
-FRONTEND_URL=http://localhost:3000
+DATABASE_URL='mysql://localhost:3306/database'
+JWT_SIGNATURE='secret123456789'
+FRONTEND_URL='http://localhost:3000'
 PORT=3300
+JWT_SECRET_KEY='JWT_SECRET_KEY'
+METAMASK_MESSAGE_CONFIG='Welcome To Marketplace'
