--- a/vercel.json
+++ b/vercel.json
@@ -18,5 +18,11 @@
               "DELETE"
           ]
       }
+  ],
+  "rewrites": [
+    {
+      "source": "/favicon.ico",
+      "destination": "/_ignore-favicon"
+    }
   ]
 }
