--- a/vercel.json
+++ b/vercel.json
@@ -18,5 +18,5 @@
             ]
         }
     ],
-    "rewrites": [{ "source": "/api/v1/(.*)", "destination": "/api/v1" }]
+    "rewrites": [{ "source": "/(.*)", "destination": "/api/v1" }]
 }
