--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "nest start",
     "dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -38,6 +38,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "eth-sig-util": "^3.0.1",
+    "fs": "^0.0.1-security",
     "kafkajs": "^2.2.4",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
