--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.3.9",
+    "@nestjs/platform-socket.io": "^10.3.9",
     "@nestjs/swagger": "^6.2.1",
+    "@nestjs/websockets": "^10.3.9",
     "@prisma/client": "^4.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
@@ -45,6 +47,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6",
+    "socket.io": "^4.7.5",
     "swagger-ui-express": "^4.1.6",
     "web3-utils": "^4.3.0",
     "winston": "^3.3.3"
