--- a/package.json
+++ b/package.json
@@ -23,14 +23,15 @@
   },
   "dependencies": {
     "@aws-sdk/client-sqs": "^3.454.0",
-    "@nestjs/common": "^9.3.9",
+    "@nestjs/common": "^10.3.9",
     "@nestjs/config": "^2.3.1",
-    "@nestjs/core": "^9.3.9",
+    "@nestjs/core": "^10.3.9",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.3.9",
     "@nestjs/platform-socket.io": "^10.3.9",
-    "@nestjs/swagger": "^6.2.1",
+    "@nestjs/platform-ws": "^10.3.9",
+    "@nestjs/swagger": "^7.3.1",
     "@nestjs/websockets": "^10.3.9",
     "@prisma/client": "^4.4.0",
     "class-transformer": "^0.5.1",
@@ -42,12 +43,12 @@
     "eth-sig-util": "^3.0.1",
     "fs": "^0.0.1-security",
     "kafkajs": "^2.2.4",
+    "nest": "^0.1.6",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6",
-    "socket.io": "^4.7.5",
     "swagger-ui-express": "^4.1.6",
     "web3-utils": "^4.3.0",
     "winston": "^3.3.3"
