--- a/.env.development
+++ b/.env.development
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL and SQLite.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL='mysql://localhost:3306/database'
+DATABASE_URL= 'mysql://avnadmin:AVNS_NQeglmyHofm1m4BlyXa@mysql-202c7f84-phamdung260510-1667.f.aivencloud.com:24026/defaultdb?ssl-mode=REQUIRED'
 JWT_SIGNATURE='secret123456789'
 FRONTEND_URL='http://localhost:3000'
 PORT=3300
